<resources>
    <string name="app_name" translatable="false">CigC</string>
    <string name="welcome">W e l c o m e !</string>
    <string name="description">Let\'s reduce the amount of cigarettes that you smoke everyday,
        or even better, let\'s stop altogheter! But first, let\'s choose your program.</string>
    <string name="manual_program">Manual Program</string>
    <string name="manual_program_description">Here you will decide how many cigarettes you are
        allowed each day and it will stay the same until you decide to update that value. Suitable
        for you who just want to reduce the amount of cigarettes or want to stop at your own pace. </string>
    <string name="automatic_program">Automatic Program</string>
    <string name="choose_program">Choose Program</string>
    <string name="relaxed">Relaxed</string>
    <string name="targeted">Targeted</string>
    <string name="you_decide_how_many_cigarettes_you_re_allowed_per_day">You decide how many cigarettes you\'re allowed per day.</string>
    <string name="that_amount_will_stay_the_same_until_you_decide_to_reduce_them">That amount will stay the same until you decide to reduce them.</string>
    <string name="for_when_you_just_want_to_cut_back_on_cigarettes_or_want_to_stop_at_your_own_pace">For when you just want to cut back or to stop at your own pace.</string>
    <string name="lets_go">Let\'s Go!</string>
    <string name="im_in">I\'m In!</string>
    <string name="tageted_desc_one">You put how many you currently smoke per day.</string>
    <string name="targeted_desc_two">You can also put when you need to be able to stop smoking.</string>
    <string name="targeted_desc_three">For when you are determined to stop no matter what.</string>
    <string name="max_number">Max Cigarettes</string>
    <string name="number_of_cig">Number of cigarettes you are allowed to smoke per day.</string>
    <string name="_10">10</string>
    <string name="emergencies">Emergencies</string>
    <string name="number_of_emergency">Number of emergency cigarettes that you can accumulate.</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="you_will_get_one_smoking_break_every">You will get one smoking break every</string>
    <string name="hour">Hour</string>
    <string name="minute">Minute</string>
    <string name="emergency_desc">If you did not take your smoking break, the allocated cigarette will be added to emergency cigarettes so you can take it later in case of an \'emergency\'.</string>
    <string name="second">Second</string>
    <string name="never">Never</string>
    <string name="please_input_max_cigarettes">Please input Max Cigarettes</string>
    <string name="continues">Continue</string>
    <string name="all_set">All Set!</string>
    <string name="dialog_desc_one">All you need to do now is just tap the button every time you smoke</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="days_elapsed">Days passed</string>
    <string name="emergency">Emergency</string>
    <string name="smoking_nbreak">Smoking\nBreak</string>
    <string name="day_passed">Day passed</string>
    <string name="cigarette_s_navailable">Cigarette(s)\nAvailable</string>
    <string name="smooth">Smooth..</string>
    <string name="setting">Settings</string>
    <string name="preference">Preferences</string>
    <string name="statistic">Statistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_program">Change Program</string>
    <string name="change_prog_desc">For when you feel that current program might not be the one that suit you the best. However, your current saved data will be lost.</string>
    <string name="change_counter">Change Counter</string>
    <string name="desc_change_counter">Changing the amount of maximum number of cigarettes and/or emergency cigarettes. Also the target time for when you choose the tageted program. Saved data will not be lost.</string>
    <string name="today">Today</string>
    <string name="this_week">This Week</string>
    <string name="this_month">This Month</string>
    <string name="this_year">This Year</string>
    <string name="see_detail">See detail</string>
    <string name="cigarette_s_has_been_smoked">cigarette(s) has been smoked</string>
    <string name="and">and</string>
    <string name="cig_smoked">cigarette(s) smoked</string>
    <string name="forx">for</string>
    <string name="which_brings_us_to">which brings us to</string>
    <string name="analysis">Analysis</string>
    <string name="cigarette_s">cigarette(s)</string>
    <string name="records">Records</string>
    <string name="current_amount_per_day">Current amount per Day</string>
    <string name="the_amount_of_cigarettes_that_you_are_usually_smokes_in_a_day">The amount of cigarettes that you are usually smokes in a day.</string>
    <string name="please_input_current_amount">Please input current amount</string>
    <string name="target">Target</string>
    <string name="_60">60</string>
    <string name="we_will_calculate_a_recommendation_time_after_you_input_current_amount">We will calculate a recommendation time after you input current amount.</string>
    <string name="please_input_target">Please input target time.</string>
    <string name="from_the_last_100_cigarettes_that_you_smoke">(From the last 100 cigarettes that you smoke)</string>
    <string name="habitual_correction_or_improvement_potential">(Habitual correction or improvement potential)</string>
    <string name="dash">-</string>
    <string name="in_the_last_week">In the last week</string>
    <string name="in_the_last_month">In the last month</string>
    <string name="not_enough_data_for_weekly">Currently, there is not enough data for analysis, try again tomorrow.</string>
    <string name="first_week_average">First Week Average</string>
    <string name="full_archive_of_the_time_you_smoke">(Full archive of the time you smoke)</string>
    <string name="no_data">No data</string>
    <string name="cigarette_s_day">cigarette(s)/day</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="all_your_previously_saved_data_will_be_lost">All your previously saved data will be lost.</string>
    <string name="calming_nblue">Calming Blue</string>
    <string name="dark_nyet_nstriking">Dark yet Striking</string>
    <string name="something_cool_yet_brave_a_combination_that_give_you_elegance_in_boldness">Something cool yet brave. A combination that give you elegance in boldness.</string>
    <string name="nice_and_easy_on_the_eye_a_refreshing_theme_almost_like_a_breeze_of_the_wind_on_your_skin">Nice and easy on the eye. A refreshing theme almost like a breeze of the wind on your skin.</string>
    <string name="calming_blue_theme">Calming Blue theme</string>
    <string name="activate_this_theme">Activate this theme?</string>
    <string name="dark_yet_striking_theme">Dark yet Striking Theme</string>
    <string name="why_are_you_smoking">Why are you smoking?</string>
    <string name="mood_related_cause">Mood related cause</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="bored">Bored</string>
    <string name="tensed">Tensed</string>
    <string name="or">Or</string>
    <string name="event_related_cause">Event related cause</string>
    <string name="after_meal">After meal</string>
    <string name="in_the_toilet">In the toilet</string>
    <string name="after_sex">After sex</string>
    <string name="on_break">On break</string>
    <string name="seeing_other_people_smokes">Seeing other people smokes</string>
    <string name="knight_of_the_dark_theme">Knight of the Dark Theme</string>
    <string name="knight_of_the_dark">Knight of the Dark</string>
    <string name="cool_and_full_of_mystery_the_very_symbol_of_awesomeness_and_a_sign_to_go_nananananana">Cool and full of mystery. The very symbol of awesomeness and a sign to go NANANANANANA..</string>
    <string name="craving">Craving</string>
    <string name="working">Working</string>

</resources>