<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/home_why_background"
    android:padding="@dimen/dimen_standard_2x">
    <TextView
        android:id="@+id/why_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/why_are_you_smoking"
        android:textColor="?attr/colorHomeWhyItemEventTextTitle"
        android:textSize="@dimen/text_size_medium"
        android:textStyle="bold"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/why_mood_title"
        android:layout_below="@+id/why_title"
        android:textColor="?attr/colorHomeWhyItemMoodTextTitle"
        android:text="@string/mood_related_cause"
        android:layout_marginTop="@dimen/dimen_standard_2x"/>
    <TextView
        android:layout_width="@dimen/dimen_standard_8x"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/happy"
        android:layout_below="@id/why_mood_title"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_mood_background"
        android:textColor="?attr/colorHomeWhyItemMoodText"
        android:text="@string/happy"/>
    <TextView
        android:layout_width="@dimen/dimen_standard_8x"
        android:layout_height="wrap_content"
        android:id="@+id/sad"
        android:gravity="center"
        android:layout_below="@id/why_mood_title"
        android:layout_toEndOf="@id/happy"
        android:layout_marginStart="@dimen/dimen_standard_2x"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_mood_background"
        android:textColor="?attr/colorHomeWhyItemMoodText"
        android:text="@string/sad"/>
    <TextView
        android:layout_width="@dimen/dimen_standard_8x"
        android:layout_height="wrap_content"
        android:id="@+id/angry"
        android:gravity="center"
        android:layout_below="@id/why_mood_title"
        android:layout_toEndOf="@id/sad"
        android:layout_marginStart="@dimen/dimen_standard_2x"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_mood_background"
        android:textColor="?attr/colorHomeWhyItemMoodText"
        android:text="@string/angry"/>
    <TextView
        android:layout_width="@dimen/dimen_standard_8x"
        android:layout_height="wrap_content"
        android:id="@+id/bored"
        android:gravity="center"
        android:layout_below="@id/happy"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_mood_background"
        android:textColor="?attr/colorHomeWhyItemMoodText"
        android:text="@string/bored"/>
    <TextView
        android:layout_width="@dimen/dimen_standard_8x"
        android:layout_height="wrap_content"
        android:id="@+id/tensed"
        android:gravity="center"
        android:layout_below="@id/happy"
        android:layout_toEndOf="@id/bored"
        android:layout_marginStart="@dimen/dimen_standard_2x"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_mood_background"
        android:textColor="?attr/colorHomeWhyItemMoodText"
        android:text="@string/tensed"/>
    <TextView
        android:layout_width="@dimen/dimen_standard_8x"
        android:layout_height="wrap_content"
        android:id="@+id/craving"
        android:gravity="center"
        android:layout_below="@id/happy"
        android:layout_toEndOf="@id/tensed"
        android:layout_marginStart="@dimen/dimen_standard_2x"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_mood_background"
        android:textColor="?attr/colorHomeWhyItemMoodText"
        android:text="@string/craving"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorHomeWhyItemMoodBackground"
        android:layout_below="@id/bored"
        android:layout_marginTop="26dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dimen_standard"
        android:paddingEnd="@dimen/dimen_standard"
        android:id="@+id/or"
        android:textColor="?attr/colorHomeWhyItemEventTextTitle"
        android:textStyle="bold"
        android:text="@string/or"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bored"
        android:layout_margin="@dimen/dimen_standard_2x"
        android:background="?attr/colorHomeWhyBackground"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/why_event_title"
        android:layout_below="@+id/or"
        android:textColor="?attr/colorHomeWhyItemEventTextTitle"
        android:text="@string/event_related_cause" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/after_meal"
        android:layout_below="@id/why_event_title"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_event_background"
        android:textColor="?attr/colorHomeWhyItemEventText"
        android:text="@string/after_meal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/on_break"
        android:layout_below="@id/why_event_title"
        android:layout_toEndOf="@id/after_meal"
        android:layout_marginStart="@dimen/dimen_standard_2x"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_event_background"
        android:textColor="?attr/colorHomeWhyItemEventText"
        android:text="@string/on_break"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/working"
        android:layout_below="@id/why_event_title"
        android:layout_toEndOf="@id/on_break"
        android:layout_marginStart="@dimen/dimen_standard_2x"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_event_background"
        android:textColor="?attr/colorHomeWhyItemEventText"
        android:text="@string/working"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/after_sex"
        android:layout_below="@id/after_meal"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_event_background"
        android:textColor="?attr/colorHomeWhyItemEventText"
        android:text="@string/after_sex"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/toilet"
        android:layout_below="@id/after_meal"
        android:layout_toEndOf="@id/after_sex"
        android:layout_marginStart="@dimen/dimen_standard_2x"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_event_background"
        android:textColor="?attr/colorHomeWhyItemEventText"
        android:text="@string/in_the_toilet"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/emphatic"
        android:layout_below="@id/after_sex"
        android:layout_marginTop="@dimen/dimen_standard"
        android:padding="@dimen/dimen_standard"
        android:background="@drawable/home_why_event_background"
        android:textColor="?attr/colorHomeWhyItemEventText"
        android:text="@string/seeing_other_people_smokes"/>

</RelativeLayout>