<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSetupRelaxedBackground"
    tools:context=".ui.SetUpRelaxedActivity">

    <ImageView
        android:id="@+id/icon_head"
        android:layout_width="@dimen/icon_size_medium"
        android:layout_height="@dimen/icon_size_medium"
        android:layout_marginStart="@dimen/dimen_standard_2x"
        android:layout_marginTop="@dimen/dimen_standard_2x"
        android:src="@drawable/ic_relaxedicon"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/icon_size_medium"
        android:layout_marginStart="@dimen/dimen_standard"
        android:layout_marginTop="@dimen/dimen_standard_3x"
        android:layout_toEndOf="@id/icon_head"
        android:fontFamily="@font/amiko"
        android:gravity="bottom"
        android:text="@string/relaxed"
        android:textAllCaps="true"
        android:textColor="?attr/colorSetupRelaxedTextTitle"
        android:textSize="@dimen/text_size_big" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/icon_head"
        android:layout_marginTop="@dimen/dimen_standard"
        android:orientation="vertical"
        android:layout_above="@id/btn_ok">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dimen_standard_2x"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/max_number_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amiko"
                    android:text="@string/max_number"
                    android:textStyle="bold"
                    android:textColor="?attr/colorSetupRelaxedTextMaxCigarette"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amiko"
                    android:text="@string/number_of_cig"
                    android:textColor="?attr/colorSetupRelaxedTextMaxCigaretteDesc"
                    android:layout_marginEnd="@dimen/dimen_standard"/>
            </LinearLayout>
            <EditText
                android:layout_width="@dimen/icon_size_big"
                android:layout_height="match_parent"
                android:background="@drawable/rect_setup_relaxed_et_max_cigarette"
                android:id="@+id/et_max_cig"
                android:padding="@dimen/dimen_standard"
                android:hint="@string/_0"
                android:textSize="@dimen/text_size_big"
                android:gravity="center"
                android:inputType="number"
                tools:ignore="Autofill,TextFields"
                android:textColor="?attr/colorSetupRelaxedEditTextMaxCigaretteText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/dimen_standard_2x"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/max_emergency_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amiko"
                    android:text="@string/emergencies"
                    android:textStyle="bold"
                    android:textColor="?attr/colorSetupRelaxedTextEmergency"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/amiko"
                    android:text="@string/number_of_emergency"
                    android:textColor="?attr/colorSetupRelaxedTextEmergencyDesc"
                    android:layout_marginEnd="@dimen/dimen_standard"/>
            </LinearLayout>
            <EditText
                android:layout_width="@dimen/icon_size_big"
                android:layout_height="match_parent"
                android:background="@drawable/rect_setup_relaxed_et_emergency"
                android:id="@+id/et_max_emergencies"
                android:padding="@dimen/dimen_standard"
                android:hint="@string/_3"
                android:textSize="@dimen/text_size_big"
                android:gravity="center"
                android:inputType="number"
                tools:ignore="Autofill,TextFields"
                android:textColor="?attr/colorSetupRelaxedEditTextEmergencyText"/>
        </LinearLayout>

        <TextView
            android:id="@+id/opening_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko"
            android:text="@string/you_will_get_one_smoking_break_every"
            android:textColor="?attr/colorSetupRelaxedTextOpeningDesc"
            android:layout_marginStart="@dimen/dimen_standard_2x"
            android:layout_marginTop="@dimen/dimen_standard_3x"
            android:layout_marginEnd="@dimen/dimen_standard_2x"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/never"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorSetupRelaxedTextNever"
            android:textSize="@dimen/text_size_big"
            android:text="@string/never"
            android:layout_marginStart="@dimen/dimen_standard_2x"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_standard_2x"
            android:layout_marginEnd="@dimen/dimen_standard_2x"
            android:orientation="horizontal"
            android:id="@+id/break_holder"
            android:visibility="gone">
            <TextView
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSetupRelaxedTextNumberHour"
                android:textSize="@dimen/text_size_big"
                tools:text="2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour"
                android:layout_marginStart="@dimen/dimen_standard"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/amiko"
                android:textColor="?attr/colorSetupRelaxedTextHour"/>
            <TextView
                android:id="@+id/minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSetupRelaxedTextNumberMinute"
                android:textSize="@dimen/text_size_big"
                android:layout_marginStart="@dimen/dimen_standard"
                tools:text="55"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minute"
                android:layout_marginStart="@dimen/dimen_standard"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/amiko"
                android:textColor="?attr/colorSetupRelaxedTextMinute"/>
            <TextView
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/colorSetupRelaxedTextNumberSecond"
                android:textSize="@dimen/text_size_big"
                android:layout_marginStart="@dimen/dimen_standard"
                tools:text="55"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/second"
                android:layout_marginStart="@dimen/dimen_standard"
                android:textSize="@dimen/text_size_medium"
                android:fontFamily="@font/amiko"
                android:textColor="?attr/colorSetupRelaxedTextSecond"/>
        </LinearLayout>

        <TextView
            android:id="@+id/emergency_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_standard_2x"
            android:layout_marginEnd="@dimen/dimen_standard_2x"
            android:layout_marginTop="@dimen/dimen_standard"
            android:fontFamily="@font/amiko"
            android:text="@string/emergency_desc"
            android:textColor="?attr/colorSetupRelaxedTextEmergencyDescBottom"
            android:visibility="gone"/>

    </LinearLayout>
    <com.royrodriguez.transitionbutton.TransitionButton
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_standard_2x"
        android:layout_marginTop="@dimen/dimen_standard_2x"
        android:layout_marginEnd="@dimen/dimen_standard_2x"
        android:layout_marginBottom="@dimen/dimen_standard_5x"
        android:text="@string/please_input_max_cigarettes"
        android:textAllCaps="false"
        android:textColor="?attr/colorSetupRelaxedButtonText"
        android:visibility="visible"
        app:defaultColor="?attr/colorSetupRelaxedButton"
        app:loaderColor="?attr/colorSetupRelaxedButtonLoader"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>