<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/dimen_standard_5x"
    android:paddingStart="@dimen/dimen_standard_2x"
    android:paddingEnd="@dimen/dimen_standard_2x">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_standard_2x"
        android:text="@string/all_set"
        android:textColor="?attr/colorDialogText"
        android:textSize="@dimen/text_size_big"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_standard_2x"
        android:gravity="center"
        android:text="@string/dialog_desc_one"
        android:textColor="?attr/colorDialogText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_btninfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"
        android:layout_marginTop="@dimen/dimen_standard_2x"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_standard_2x"
        android:gravity="center"
        android:text="@string/are_you_ready"
        android:textColor="?attr/colorDialogText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <com.royrodriguez.transitionbutton.TransitionButton
        android:id="@+id/btn_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_standard_2x"
        android:padding="@dimen/dimen_standard_2x"
        android:text="@string/lets_go"
        android:textAllCaps="false"
        android:textColor="?attr/colorDialogButtonText"
        app:defaultColor="?attr/colorDialogButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_two"
        app:loaderColor="?attr/colorDialogButtonLoader" />


</androidx.constraintlayout.widget.ConstraintLayout>