<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingFragment"
    android:background="?attr/colorSettingsBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/change_program"
            android:background="@drawable/setting_change_program_background">
            <TextView
                android:id="@+id/title_change_program"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_program"
                android:fontFamily="@font/amiko"
                android:textColor="?attr/colorSettingsChangeProgramTitle"
                android:layout_marginStart="@dimen/dimen_standard_2x"
                android:layout_marginTop="@dimen/dimen_standard_2x"
                android:textSize="@dimen/text_size_medium"/>
            <TextView
                android:id="@+id/desc_cange_program"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_change_program"
                android:layout_marginStart="@dimen/dimen_standard_2x"
                android:layout_marginEnd="@dimen/dimen_standard_2x"
                android:textColor="?attr/colorSettingsChangeProgramDesc"
                android:fontFamily="@font/amiko"
                android:text="@string/change_prog_desc"
                android:textSize="@dimen/text_size_small"/>
            <TextView
                android:layout_width="128dp"
                android:layout_height="40dp"
                android:background="@drawable/rippled_option_change_program_button"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:textColor="?attr/colorSettingsChangeProgramButtontext"
                android:text="@string/lets_go"
                android:gravity="center"
                android:id="@+id/btn_change_program"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="2dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:id="@+id/change_counter"
            android:background="@drawable/setting_change_counter_background"
            android:layout_marginTop="@dimen/dimen_standard_2x">
            <TextView
                android:id="@+id/title_change_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_counter"
                android:fontFamily="@font/amiko"
                android:textColor="?attr/colorSettingsChangeCounterTitle"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginTop="@dimen/dimen_standard_2x"
                android:layout_marginStart="@dimen/dimen_standard_2x"/>
            <TextView
                android:id="@+id/desc_cange_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_change_counter"
                android:textColor="?attr/colorSettingsChangeCounterDesc"
                android:fontFamily="@font/amiko"
                android:text="@string/desc_change_counter"
                android:textSize="@dimen/text_size_small"
                android:layout_marginStart="@dimen/dimen_standard_2x"
                android:layout_marginEnd="@dimen/dimen_standard_2x"/>
            <TextView
                android:layout_width="128dp"
                android:layout_height="40dp"
                android:background="@drawable/setting_change_counter_button"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:textColor="?attr/colorSettingsChangeCounterButtontext"
                android:text="@string/lets_go"
                android:gravity="center"
                android:id="@+id/btn_change_counter"/>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>